[package]
name = "nanan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.26", features = ["macros", "rt-multi-thread"]} 
api_server = {version = "0.1", path = "packages/api_server", default-features = true }
tracing = "0.1.26"
tracing-subscriber = "0.3.1"
tonic = {version = "0.8", default-features = false, features = ["prost", "codegen", "tls", "tls-roots", "tls-webpki-roots"]}



[workspace]
members = [
    "packages/api_server",
]

